...
            "state": "translated",
            "value": "コアイメージ：%1$@、%2$@"
          }
        }
      }
    },
    "Phrases": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "フレーズ"
          }
...
    "Dismiss": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "閉じる"
          }
        }
      }
    },
    "%@. %lld reviews due": {
      "localizations": {
...
            "state": "translated",
            "value": "保存したフレーズはありません"
          }
        }
      }
    },
    "No matching phrases": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "一致するフレーズはありません"
          }
...
            "state": "translated",
            "value": "現在の音声"
          }
        }
      }
    },
    "Daily learning": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "1日で学習するフレーズ数"
...
            "state": "translated",
            "value": "IELTSとCEFR"
          }
        }
      }
    },
    "Idioms": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Idioms"
...
            "state": "translated",
            "value": "次の表現"
          }
        }
      }
    },
    "Next reminder": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "次の通知"
...
